test/testData/psi/parser/ill-formed/useItem.rust
// #1
use self :: y :: { self } // missing ';'